# vision

./: .gitignore  LICENSE.txt  README.md  add_license_header.sh  demo.rviz  requirements.txt
data/: geometry_graph_example3.yaml  ifco.yaml  ifco_sim.yaml
ecto_cerrt/: CMakeLists.txt  package.xml
ecto_cerrt/data/: bla.wrl  cerrt.yaml  points3  text.wrl
ecto_cerrt/scripts/: boxes.wrl  boxes.xml  points  points2  viewPlanes.m  wrlToPlanes.m
ecto_cerrt/src/: createWRL.cpp  getPlanes.cpp  main.cpp
ecto_rbo/: CMakeLists.txt  package.xml
ecto_rbo_dbg/: CMakeLists.txt  package.xml  setup.py
ecto_rbo_dbg/doc/source/: cells.rst  conf.py  index.rst
ecto_rbo_dbg/include/ecto_rbo_dbg/: PlasmYamlFactoryRViz.h
ecto_rbo_dbg/src/: PlasmYamlFactoryRViz.cpp  ecto_yaml_dbg.cpp
ecto_rbo_dbg/src/ecto_rbo_dbg/: Executer.cpp  RVizVisualHelpers.cpp  module.cpp
ecto_rbo_dbg/src/ecto_rbo_dbg_py/: __init__.py  rviz_publishers.py
ecto_rbo_grasping/: CMakeLists.txt  bla  package.xml
ecto_rbo_grasping/doc/source/: cells.rst  conf.py  index.rst
ecto_rbo_grasping/doc/source/ecto_theme/: theme.conf
ecto_rbo_grasping/include/ecto_rbo_grasping/: CylindricalManifold.h  EnvironmentalConstraintRegion.h  OrientationSet.h  PoseSet.h  SphericalManifold.h  gdiam.hpp
ecto_rbo_grasping/src/ecto_rbo_grasping/: ApproachBoxGrasp.cpp  BroadcastBoxGrasps.cpp  BroadcastCylinderGrasps.cpp  BroadcastDiskGrasps.cpp  BroadcastGrasps.cpp  BroadcastSphereGrasps.cpp  CliffGrasps.cpp  CreateGeometryGraph.cpp  CreateGrasps.cpp  CylindricalManifold.cpp  EdgeExploitingGrasps.cpp  EnvironmentalConstraintRegion.cpp  FilterManifolds.cpp  FilterPreGrasps.cpp  GraspStrategyArraySubscriber.cpp  IfcoGrasp.cpp  IfcoGrasps.cpp  LandingMotions.cpp  ManifoldsAtEdges.cpp  ManifoldsPlanar.cpp  MergeGraspStrategies.cpp  MergeManifolds.cpp  OrientationSet.cpp  OrientationTest.cpp  PlanGrasps.cpp  PointFeatureHistogram.cpp  PoseSet.cpp  PositioningMotions.cpp  PublishGeometryGraph.cpp  PublishGraspStrategySequence.cpp  PublishGrasps.cpp  PublishManifolds.cpp  PublishObjectList.cpp  PushingMotions.cpp  PushingSeeds.cpp  SegmentObjects.cpp  SlidingSeeds.cpp  SphericalManifold.cpp  TransitionPressSlide.cpp  TransitionSlideEdgeGrasp.cpp  (+6 more)
ecto_rbo_pcl/: CMakeLists.txt  package.xml  setup.py
ecto_rbo_pcl/doc/source/: cells.rst  conf.py
ecto_rbo_pcl/include/ecto_rbo_pcl/: common.h  convex_edge_comparator.h  curvature_comparator.h  edge_comparator.h  intensity_comparator.h
ecto_rbo_pcl/launch/: launch_ifco_pose_server.launch  staticTFforIfco.launch
ecto_rbo_pcl/samples/: crop_pcd.py  show_normals.py
ecto_rbo_pcl/src/ecto_rbo_pcl/: BBox2GSig.cpp  BroadcastIfcoSpecifications.cpp  BroadcastTF.cpp  Centroid.cpp  CreateTF.cpp  CropBox.cpp  ExtractClosestCluster.cpp  FilterClustersBySize.cpp  FilterObjects.cpp  FloodFill.cpp  IfcoDetection.cpp  MergeClusters.cpp  Message2PointCloud.cpp  MultiObjectDetection.cpp  NormalEstimationIntegral.cpp  PCDReader.cpp  PassThroughOrganized.cpp  PlaneFits.cpp  RegionGrowingRGB.cpp  RemoveNaNFromPointCloud.cpp  SelectClustersFromLines.cpp  TF2Vector.cpp  Vector2TF.cpp  WrapInVector.cpp  boost_python_converters.cpp  module.cpp
ecto_rbo_pcl/test/: centroid.yaml  plane_fitting.yaml
ecto_rbo_yaml/: CMakeLists.txt  package.xml
ecto_rbo_yaml/cfg/: PlasmParameters.cfg  ifco_example.rviz  vision_example.rviz
ecto_rbo_yaml/data/: affordance_convex_edge.yaml  affordance_sliding.yaml  cliff_grasp.yaml  demo_ifco.yaml  demo_vision.yaml  detect_cyl_grasps_iros.yaml  detect_cyl_grasps_kit.yaml  detect_cyl_grasps_parameter_tuning.yaml  disney.yaml  disney_at_tub.yaml  disney_sim.yaml  edge_exploiting_grasp_detector.yaml  grasp_descriptor_learning.yaml  ifco.yaml  ifcoOcado.yaml  ifco_EC1.yaml  ifco_Ocado_lab.yaml  ifco_RBO_Ocado_noEC.yaml  ifco_sim.yaml  ifco_sim_ocado.yaml  principal_curvature.yaml  sc_wc_ec_grasps.yaml  simple_edge_grasp_sampler.yaml  simple_grasp_sampler.yaml  simple_wall_grasp_sampler.yaml  test_depth_edges.yaml  test_manifolds.yaml  test_orientations.yaml  test_principalcurvature.yaml  test_range_surface.yaml  test_regiongrowingrgb.yaml  test_single_region_growing.yaml
ecto_rbo_yaml/data/object_specific_yaml/: cucumber.yaml  netbag.yaml
ecto_rbo_yaml/doc/source/: cells.rst  conf.py  index.rst
ecto_rbo_yaml/include/ecto_rbo_yaml/: PlasmYamlFactory.h
ecto_rbo_yaml/src/: PlasmYamlFactory.cpp  ecto_yaml_dynamic_reconfigure.cpp  ecto_yaml_dynamic_reconfigure.h.inl  ecto_yaml_dynamic_reconfigure_preparation.cpp  ecto_yaml_node.cpp  ecto_yaml_to_pdf.cpp  plasm_yaml_factory.py  plasm_yaml_ros_node.py
pc_downsampler/: CMakeLists.txt  README.md  package.xml
pc_downsampler/launch/: pc_downsampler_kinect2.launch
pc_downsampler/src/: main.cpp
pregrasp_msgs/: CMakeLists.txt  mainpage.dox  package.xml
pregrasp_msgs/msg/: GraspStrategy.msg  GraspStrategyArray.msg  GraspStrategySequence.msg  Milestone.msg  PoseSet.msg  PreGrasp.msg  PreGraspManifold.msg
pregrasp_msgs/srv/: ComputeECGraph.srv  ExecuteGraspStrategy.srv
pregrasp_msgs/srv/msg_definitions/: ComputeECGraph.srv
